# Pytorch-course

./: 02_AutoGrad.py  03_BackPropagation.py  04_step1_gradient_descent_with_autograd_and _backpropagation.py  04_step2_gradient_descent_with_autograd_and _backpropagation.py  04_step3_gradient_descent_with_autograd_and _backpropagation.py  04_step4_gradient_descent_with_autograd_and _backpropagation.py  05_LinearRegression.py  06_LogisticRegression.py  07_Dataset_and_DataLoader.py  08_transforms.py  09_Softmax_and_Cross_Entropy.py  10_Activation_Functions.py  10_plot_activations.py  11_Feed_Forward_Neural_Network.py  12_Convolutiona_Neural_Network.py  13_Transfer_Learning.py  14_TensorBoard.py  15_Saving_and_Loading_models.py  TensorBasics.py  pyproject.toml
resources/: PyTorch_Transforms.md
runs/mnist/: events.out.tfevents.1727866380.Subashs-MacBook-Pro.local.41001.0  events.out.tfevents.1727866708.Subashs-MacBook-Pro.local.41322.0  events.out.tfevents.1727866794.Subashs-MacBook-Pro.local.41473.0  events.out.tfevents.1727867619.Subashs-MacBook-Pro.local.41898.0  events.out.tfevents.1727867963.Subashs-MacBook-Pro.local.42062.0  events.out.tfevents.1727867976.Subashs-MacBook-Pro.local.42078.0  events.out.tfevents.1727867977.Subashs-MacBook-Pro.local.42078.1  events.out.tfevents.1727868077.Subashs-MacBook-Pro.local.42175.0  events.out.tfevents.1727868077.Subashs-MacBook-Pro.local.42175.1  events.out.tfevents.1727868229.Subashs-MacBook-Pro.local.42293.0  events.out.tfevents.1727868230.Subashs-MacBook-Pro.local.42293.1  (+35 more)
(+29 files in other folders)
