[tool.poetry]
name = "pytorch-course"
version = "0.1.0"
description = "Learning Pytorch"
authors = ["Subash Pandey <axlesubash111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
tensorboard = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
